syntax = "proto3";
option go_package = "main/pb";

package pb;

import "user.proto";

message UpdateUserRequest {
  string username = 1;
  optional string full_name = 2;
  optional string email = 3;
  optional string password = 4;
}

message UpdateUserResponse {
  User user = 1;
}

 

 