syntax = "proto3";
option go_package = "main/pb";

package pb;

import "google/protobuf/timestamp.proto";

message User {
  string username = 1;
  string full_name = 2;
  string email = 3;
  google.protobuf.Timestamp password_changed_at = 4;
  google.protobuf.Timestamp created_at = 5;
}

